# M5Stack-chan-Voice

./: README.md  README_org.md
.git_dmy/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
.git_dmy/logs/: HEAD
.git_dmy/objects/pack/: pack-813f24ba4d0fa2c1b828a53ad0c03be3c76cd163.idx
.git_dmy/refs/heads/: main
app/: README.md  pubspec.yaml
app/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
app/android/app/: build.gradle.kts
app/assets/: setup1.mov  setup2.mov  stack_chan_model.glb
app/ios/: Podfile
app/ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h  SceneDelegate.swift
app/ios/Runner.xcodeproj/: project.pbxproj
app/ios/RunnerTests/: RunnerTests.swift
app/lib/: app_state.dart  main.dart
app/lib/model/: blue_device_info.dart  blue_model.dart  dance_list.dart  device.dart  expression_data.dart  model.dart  msg_type.dart  registration_response.dart  stack_chan_music_info.dart  upload_file_data.dart  (+1 more)
app/test/: widget_test.dart
firmware/: README.md  partitions.csv  repos.json  scan_secrets.py
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
firmware/patches/: xiaozhi-esp32.patch
remote/: README.md
remote/code/: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
remote/code/main/: CMakeLists.txt  idf_component.yml
remote/code/main/ui/: lv_conf.h  updown_img.c
server/: README.MD  go.mod  main.go
server/check_list/: create_mysql_database.sql
server/hack/: config.yaml  hack-cli.mk  hack.mk
server/utility/: rsa.go
(+354 files in other folders)
